NEW - bug 194875: manage eclipse.org/mylyn web site content https://bugs.eclipse.org/bugs/show_bug.cgi?id=194875

--- a/new/new.html
+++ b/new/new.html
@@ -1,8 +1,6 @@
 <html>
 <body bgcolor="FFFFFF">
 
-<p><i>Updates in progress...</i></p>
-
 <table border="1" style="border-collapse: collapse" width="100%" id="table128" cellpadding="4" bordercolor="#FFFFFF">
 	<tr>
 		<td bgcolor="#595791" width="7%" align="center"><b>
@@ -19,9 +17,11 @@
 		<td bgcolor="#FAF7FB" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&product=Mylyn&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2007-05-15&chfieldto=2007-06-29&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
 		<font size="1">298</font><br><font size="1">bugs</font></a></td>
-		<td bgcolor="#FAF7FB"><font size="1">Key contributions and patches were 
-		provided by Leo Dos Santos, Balazs Brinkus, Shawn Minto, Willian Mitsuda, 
-		Frank Becker, Erik Pearson, Meghan Allen, Christian Dupuis, Tomasz Zarna, 
+		<td bgcolor="#FAF7FB"><font size="1">Leo Dos Santos contributed working 
+		set switching UI, Balazs Brinkus contributed the welcome content and 
+		other new user experience improvements, Shawn Minto identified and fixed 
+		resources leaks, and Willian Mitsuda improved editor. Helpful bug fixes 
+		and enhancements were provided by Becker, Erik Pearson, Meghan Allen, Christian Dupuis, Tomasz Zarna, 
 		David Green and Mark Phippard.</font></td>
 	</tr>
 	<tr>
@@ -84,10 +84,10 @@ timings (Mylyn now uses a new and much more robust timing mechanism).<br>
 &nbsp;&nbsp;&nbsp; - The offline task data cache will be reset, so submit outgoing changes before 
 	updating.<br>
 &nbsp;&nbsp;&nbsp; - If upgrading from a 0.x version, first update to Mylyn 1.0 
-and see the corresponding <a href="http://eclipse.org/mylar/doc/new-1.0.html">
+and see the corresponding <a href="http://eclipse.org/mylyn/doc/new-1.0.html">
 update notes</a>.<br>
 &nbsp;&nbsp;&nbsp; - Trac xml-rpc users: you will
-<a href="http://wiki.eclipse.org/index.php/Mylar_FAQ#Trac_Connector">need the 
+<a href="http://wiki.eclipse.org/index.php/Mylyn_FAQ#Trac_Connector">need the 
 latest</a> XmlRpcPlugin.<br>&nbsp;</p>
 
 <p><b>Mylar -&gt; Mylyn Migration</b></p>
@@ -115,13 +115,13 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <h2><a name="help">Help</a></h2>
 
-<table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table355">
+<table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylyn/doc/images/dev/ id="table355">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Welcome Content</b></p>
 			</td>
 			<td valign="top" width="70%">
-			<p class="MsoPlainText">Open via <b>Help -> Welcome</b></p>
+			<p class="MsoPlainText">Open via <i>Help -> Welcome.</i></p>
 			<img src="images/2.0/welcome.gif"></td>
 		</tr>
 		<tr>
@@ -131,14 +131,15 @@ at the 2.0 quality level or because they are experimental features.</p>
 		</tr>
 </table>
 
-<table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table346">
+<table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylyn/doc/images/dev/ id="table346">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>UI Legend for Connectors</b></p>
 			</td>
 			<td valign="top" width="70%">
-			<i>Help -&gt; Mylyn UI Legend</i> now displays connector-specific icon 
-			contributions.&nbsp; <p>
+			The <i>Show UI Legend</i> in the <i>Task List </i>view menu can be 
+			used to show Task Repository Connector specific icon contributions 
+			in addition to other icon and label display conventions.&nbsp; <p>
 			<img src="images/2.0/ui-legend.gif"></td>
 		</tr>
 		<tr>
@@ -151,7 +152,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 <p>&nbsp;</p>
 <h2><a name="task-list">Task List</a></h2>
 
-<table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table353">
+<table cellpadding="10" cellspacing="0" id="table353">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Working Sets<br>
@@ -159,17 +160,23 @@ at the 2.0 quality level or because they are experimental features.</p>
 			</td>
 			<td valign="top" width="70%">
 			<p class="MsoPlainText">Mylyn now provides a unified working set 
-			mechanism for tasks and resources.&nbsp; Using the bar on the Task 
-			List create working sets that includes queries, categories and 
+			mechanism for tasks and projects.&nbsp; Using the switcher bar on the 
+			<i>Task 
+			List</i> create working sets that includes related queries, categories and 
 			workspace projects.&nbsp; As long as Eclipse views are set to show 
-			the Window Working Set (this is the default), switching Mylyn 
+			the <i>Window Working Set</i> (this is the default), switching Mylyn 
 			working sets will cause both the Task List and Eclipse views to show 
-			only the elements that have been selected to be part of the working 
-			set when the views are <i>not</i> focused on the Active task.&nbsp; 
-			When views like the Package Explorer are focused and you navigate 
-			across working sets the elements will still populate the view as 
-			expected<p class="MsoPlainText">
+			only the tasks and projects&nbsp; that are part of the working set.&nbsp; 
+			For example, if you set up a Mylyn working set and enable it with 
+			the drop-down, the <i>Task List</i>, <i>Package Explorer</i> and <i>
+			Problems</i> views will only show content related to that working 
+			set. You can also scope <i>Search</i> to only find things in the 
+			working set.&nbsp; Selecting <i>Show All</i> in the drop-down will 
+			ensure that you all elements as usual. <p class="MsoPlainText">
 			<img src="images/2.0/working-sets-switch.gif"><p class="MsoPlainText">
+			In addition to using the pull-down to switch active tasks, the 
+			context menu on the task hyperlink can be used to perform actions on 
+			the task.&nbsp;
 			To edit the working set use the pull-down menu visible above or 
 			click the working set's label.<p class="MsoPlainText">
 			<img src="images/2.0/working-sets-edit.gif"></td>
@@ -184,7 +191,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table340">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>New Task List layout</b></p>
+			<p align="right"><b>Improved Layout</b></p>
 			</td>
 			<td valign="top" width="70%">
 			The <i>Task List</i> layout has been updated to use a custom drawn 
@@ -198,17 +205,10 @@ at the 2.0 quality level or because they are experimental features.</p>
 				2-3 more tasks visible.</li>
 				<li>The icon scheme has been updated to make incoming indicators 
 				easier to pick out, hits more consistent with tasks, and the 
-				kind of task appear on the icon (see the <i>Help -&gt; Mylyn UI 
-				Legend</i> for the updated scheme).&nbsp; Note in particular 
+				kind of task appear on the icon.&nbsp; Note in particular 
 				that new tasks now have the task icon background and are 
 				distinguished by a special incoming indicator.</li>
 			</ul>
-			<p>Note that the incoming overlays can also be configured to use the 
-			Synchronize view style icons and left-facing placement via <i>Preferences -&gt; Task List 
-				-&gt; Layout</i>.&nbsp; Please use
-			<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=182772">bug 
-			182772</a> for feedback or reporting any OS-specific rendering 
-			problems.</p>
 			<p>
 			<img src="images/2.0M3/tasklist-tree.gif"></td>
 		</tr>
@@ -246,7 +246,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table313">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Drag and Drop improvements</b></p>
+			<p align="right"><b>Drag and Drop </b></p>
 			</td>
 			<td valign="top" width="70%">
 			To attach files to a repository task them onto the Task Editor from 
@@ -265,14 +265,15 @@ at the 2.0 quality level or because they are experimental features.</p>
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table315">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Hyperlinks in Java Editor<br>
+			<p align="right"><b>Java Editor Hyperlinks<br>
 			(3.3 only)</b></p>
 			</td>
 			<td valign="top" width="70%">
 			References to tasks and bugs in the Java Editor and now hyperlinked 
 			consistently with the Task Editor.&nbsp; The Task Repository must be 
 			defined on the corresponding project (set via <i>Project Properties </i>-&gt; <i>Task Repository</i>). 
-			References to tasks must be moused over to turn into hyperlinks.<p>
+			References to tasks must be moused over to turn into hyperlinks. The 
+			syntax used for hyperlinks is connector specific.<p>
 			<img src="images/2.0M1/java-editor-hyperlink.gif"></td>
 		</tr>
 		<tr>
@@ -285,7 +286,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table332">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Task Hyperlinks in Text Editors<br>
+			<p align="right"><b>Text Editor Hyperlinks<br>
 			(3.3 only)</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -304,7 +305,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table347">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Task tooltips show changes</b></p>
+			<p align="right"><b>Tooltip Show Changes</b></p>
 			</td>
 			<td valign="top" width="70%">
 			Task List tooltips now summarize incoming changes, making it easier 
@@ -325,7 +326,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table335">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Content Assist in Task Editor</b></p>
+			<p align="right"><b>Content Assist</b></p>
 			</td>
 			<td valign="top" width="70%">
 		The Task Editor now supports content assist.&nbsp; The proposals include 
@@ -347,7 +348,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 			<p align="right"><b>Offline Improvements</b></p>
 			</td>
 			<td valign="top" width="70%">
-		The offline support has been improved to be more transparent.&nbsp; 
+		The offline cache is now much faster and much more robust.&nbsp; 
 		Offline data for all tasks, even unread ones, is downloaded in the 
 		background, so before going offline all you need to do is run one successful 
 		synchronization.&nbsp; If switching frequently between being connected 
@@ -370,7 +371,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table326">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Task Editor Improvements</b></p>
+			<p align="right"><b>Performance and Layout</b></p>
 			</td>
 			<td valign="top" width="70%">
 			The performance of repository task opening has improved 
@@ -378,7 +379,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 			server and all editor pages load lazily.&nbsp; If editor contents become stale, the 
 			header will be updated as below (Eclipse 3.3) or a dialog will 
 			show (Eclipse 3.2).&nbsp; The <i>Synchronize</i> button on the right 
-			of the header retrieves the latest contents.&nbsp; There have also been numerous layout and improvements.<p>
+			of the header retrieves the latest contents.&nbsp; The information 
+			density and layout of the editor has also been improved.<p>
 			<img src="images/2.0M2/task-editor-warning.gif"></td>
 		</tr>
 		<tr>
@@ -391,7 +393,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table316">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Task Editor lifecycle streamlined</b></p>
+			<p align="right"><b>Lifecycle Streamlined</b></p>
 			</td>
 			<td valign="top" width="70%">
 			The <i>Task Editor</i> no longer closes on submission, and instead shows 
@@ -415,6 +417,30 @@ at the 2.0 quality level or because they are experimental features.</p>
 <p>&nbsp;</p>
 <h2><a name="task-repositories">Task Repositories</a></h2>
 
+<table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table356">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
+			<p align="right"><b>Offline and Actions</b></p>
+			</td>
+			<td valign="top" width="70%">
+			Repositories can now be put into Offline mode, which will cause them 
+			to stop participating in synchronization.&nbsp; Thanks to the 
+			improved offline cache robustness this can be used when you stop 
+			working with a particular repository but still want to access the 
+			tasks that you had queries for. 
+			<p>Also note that local tasks (stored with the Task List, not on a 
+			server) are now a repository and that actions for working with tasks 
+			and queries are available in the context menu.</p>
+			<p>
+			<img src="images/2.0/repositories-actions.gif"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table323">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
@@ -426,22 +452,6 @@ at the 2.0 quality level or because they are experimental features.</p>
 			settings instead of the Platform Update settings.&nbsp; These can be 
 			overridden per-repository.<p>
 			<img src="images/2.0M2/repository-settings-proxy.gif"></td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-<table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table334">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Max hits settings removed</b></p>
-			</td>
-			<td valign="top" width="70%">
-			The &quot;Max hits&quot; setting on task repository queries has been removed 
-			since it was too easy to not notice when the max was reached.</td>
 		</tr>
 		<tr>
 			<td colspan="2">
@@ -487,11 +497,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 			Task contexts are now dramatically quicker to activate and provide a 
 			perfect restore of the editors that were available when the task was 
 			deactivated.&nbsp; This includes restoring the line numbers and 
-			selections of editors closed.&nbsp; As a result there should be no 
-			more need to use the &quot;Pause Capturing Context&quot; action and we are 
-			considering removing it (comment on
-			<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=186874">bug 
-			186874</a> if you still have a use case for it).</td>
+			selections of editors closed.&nbsp; </td>
 		</tr>
 		<tr>
 			<td colspan="2">
@@ -643,6 +649,43 @@ at the 2.0 quality level or because they are experimental features.</p>
 </table>
 
 <p>&nbsp;</p>
+<h2><a name="connector-trac">Trac Connector</a></h2>
+
+<table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table322">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
+			<p align="right"><b>Hyperlinks in Task Editor<br>
+			(3.3 only)</b></p>
+			</td>
+			<td valign="top" width="70%">
+			Trac hyperlinks are now supported in the task editor.<p>
+			<img src="images/2.0M2/trac-hyperlinks.gif"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table330">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
+			<p align="right"><b>Custom Fields</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p class="MsoPlainText">Trac now supports the selection from a list 
+			of pre-defined values for custom fields.</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<p>&nbsp;</p>
 <h2><a name="connector-jira">Jira Connector (Incubation)</a></h2>
 
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table344">
@@ -749,47 +792,9 @@ at the 2.0 quality level or because they are experimental features.</p>
 			Mylyn -&gt; 
 			Usage Data</i> page.&nbsp; More information on how the monitor works 
 			can be found in
-			<a href="http://wiki.eclipse.org/index.php/Mylar_Integrator_Reference#Monitor_API">
-			Eclipsepedia</a>.</p>
+			<a href="http://wiki.eclipse.org/index.php/Mylyn_Integrator_Reference#Monitor_API">Eclipsepedia</a>.</p>
 			<p>
 			<img src="images/2.0M3/ui-usage-report.gif"></td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-<p>&nbsp;</p>
-<h2><a name="connector-trac">Trac Connector</a></h2>
-
-<table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table322">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Hyperlinks in Task Editor<br>
-			(3.3 only)</b></p>
-			</td>
-			<td valign="top" width="70%">
-			Trac hyperlinks are now supported in the task editor.<p>
-			<img src="images/2.0M2/trac-hyperlinks.gif"></td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-<table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table330">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Custom Fields</b></p>
-			</td>
-			<td valign="top" width="70%">
-			<p class="MsoPlainText">Trac now supports the selection from a list 
-			of pre-defined values for custom fields.</p>
-			</td>
 		</tr>
 		<tr>
 			<td colspan="2">
