--- a/new/new.html
+++ b/new/new.html
@@ -420,7 +420,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table356">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Offline and Actions</b></p>
+			<p align="right"><b>Repository Actions</b></p>
 			</td>
 			<td valign="top" width="70%">
 			Repositories can now be put into Offline mode, which will cause them 
@@ -433,6 +433,26 @@ at the 2.0 quality level or because they are experimental features.</p>
 			and queries are available in the context menu.</p>
 			<p>
 			<img src="images/2.0/repositories-actions.gif"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table357">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
+			<p align="right"><b>Search Actions</b></p>
+			</td>
+			<td valign="top" width="70%">
+			The results of a search created via the <i>Search</i> dialog can be 
+			used to create a query with the same search parameters. While the 
+			recommended way to work with repository tasks is via queries, 
+			individual tasks can also be added to the <i>Task List</i> with the 
+			search results popup menu.<p>
+			<img src="images/2.0/search-actions.gif"></td>
 		</tr>
 		<tr>
 			<td colspan="2">
@@ -688,10 +708,27 @@ at the 2.0 quality level or because they are experimental features.</p>
 <p>&nbsp;</p>
 <h2><a name="connector-jira">Jira Connector (Incubation)</a></h2>
 
+<table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table320">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
+			<p align="right"><b>General Improvements</b></p>
+			</td>
+			<td valign="top" width="70%">
+			The JIRA Connector now supports features such as issue operations, 
+			task editor content assist and subtask viewing in the <i>Task List
+			</i>(enable via view menu).</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table344">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Attachment support</b></p>
+			<p align="right"><b>Attachments</b></p>
 			</td>
 			<td valign="top" width="70%">
 			The JIRA task editor now supports attachments, both for files and 
@@ -708,7 +745,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table321">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Hyperlinks in Java Editor<br>
+			<p align="right"><b>Java Editor Hyperlinks<br>
 			(3.3 only)</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -723,27 +760,10 @@ at the 2.0 quality level or because they are experimental features.</p>
 		</tr>
 </table>
 
-<table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table320">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Proxies and Http Auth</b></p>
-			</td>
-			<td valign="top" width="70%">
-			The JIRA Connector now supports proxy settings and http auth.&nbsp; 
-			In addition, there have been numerous bug fixes of connectivity and 
-			rich editor support.</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table307">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Hyperlinks in Task Editor</b></p>
+			<p align="right"><b>Task Editor Hyperlinks</b></p>
 			</td>
 			<td valign="top" width="70%">
 			References to JIRA issue keys are now hyperlinked.<p>
