--- a/new/new.html
+++ b/new/new.html
@@ -16,7 +16,7 @@
 		<i>Jun. 29</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&product=Mylyn&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2007-05-15&chfieldto=2007-06-29&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
-		<font size="1">298</font><br><font size="1">bugs</font></a></td>
+		<font size="1">304</font><br><font size="1">bugs</font></a></td>
 		<td bgcolor="#FAF7FB"><font size="1">Leo Dos Santos contributed working 
 		set switching UI, Balazs Brinkus contributed the welcome content and 
 		other new user experience improvements, Shawn Minto identified and fixed 
@@ -69,9 +69,9 @@
 	</table>
 
 <p><b>Also see the New &amp; Noteworthy for: 
-<a href="http://eclipse.org/mylyn/doc/new-1.0.html">Mylyn 0.6-1.0</a>, <a href="http://eclipse.org/mylyn/doc/new-0.5.html">
+<a href="http://eclipse.org/mylyn/new/new-1.0.html">Mylyn 0.6-1.0</a>, <a href="http://eclipse.org/mylyn/new/new-0.5.html">
 Mylyn 0.5</a>,&nbsp;
-<a href="http://eclipse.org/mylyn/doc/new-0.4.html">Mylyn 0.4</a>, <a href="http://eclipse.org/mylyn/doc/new-0.3.html">
+<a href="http://eclipse.org/mylyn/new/new-0.4.html">Mylyn 0.4</a>, <a href="http://eclipse.org/mylyn/new/new-0.3.html">
 Mylyn 0.3</a></b></p>
 
 <!--
