--- a/zest.html
+++ b/zest.html
@@ -1,3 +1,3 @@
 <html>
-<meta http-equiv="refresh" content="0;URL=http://www.eclipse.org/mylar/zest.php">
+<meta http-equiv="refresh" content="0;URL=http://www.eclipse.org/mylyn/zest.php">
 </html>
