NEW - bug 194875: manage eclipse.org/mylyn web site content https://bugs.eclipse.org/bugs/show_bug.cgi?id=194875

--- a/rename.html
+++ b/rename.html
@@ -13,7 +13,7 @@
 substance accelerates our thoughts by making neurons much more efficient at 
 conducting electricity. The <a href="http://eclipse.org/mylyn">Mylyn</a> 
 name is a tribute to this substance, as many users claim that our tools increase 
-efficiency to the point where we can code at the speed of thought. The referred 
+efficiency to the point where we can code at the speed of thought. The preferred 
 pronunciation is&nbsp; <tt>'mIl&amp;n</tt>, like saying &quot;my&quot; and &quot;lynn&quot; quickly.</p>
 <h3>Why is the Eclipse Mylar project changing its name to Mylyn?</h3>
 <p>The Eclipse Foundation takes a lot of pride from the efforts it puts into 
