ASSIGNED - bug 130240: [connector] XPlanner https://bugs.eclipse.org/bugs/show_bug.cgi?id=130240

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -67,8 +67,11 @@ at the 2.0 quality level or because they are experimental features.</p>
 -->
 <hr>
 
-<p><br>
-&nbsp;</p>
+<p>Notes:</p>
+<ul>
+	<li>If using versions prior to 2.0, must upgrade to 2.0 before installing 
+	newer version.<br>&nbsp;</li>
+</ul>
 <h2><a name="task-list">Task List</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table353">
