RESOLVED - bug 200898: please correct my name in Release 2.0 https://bugs.eclipse.org/bugs/show_bug.cgi?id=200898

--- a/new/new.html
+++ b/new/new.html
@@ -21,7 +21,7 @@
 		set switching UI, Balazs Brinkus contributed the welcome content and 
 		other new user experience improvements, Shawn Minto identified and fixed 
 		resources leaks, and Willian Mitsuda improved editor. Helpful bug fixes 
-		and enhancements were provided by Becker, Erik Pearson, Meghan Allen, Christian Dupuis, Tomasz Zarna, 
+		and enhancements were provided by Frank Becker, Erik Pearson, Meghan Allen, Christian Dupuis, Tomasz Zarna, 
 		David Green and Mark Phippard.</font></td>
 	</tr>
 	<tr>
