--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -89,5 +89,21 @@ at the 2.0 quality level or because they are experimental features.</p>
 		</tr>
 </table>
 
+<table cellpadding="10" cellspacing="0" id="table354">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
+			<p align="right"><b>Misc</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p class="MsoPlainText">Content assist proposals<p class="MsoPlainText">
+			Cached Configuration for Bugzilla repository [udpate]</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
 </body>
 </html>
