REOPENED - bug 195295: fix layout of download page on IE6 https://bugs.eclipse.org/bugs/show_bug.cgi?id=195295

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -95,8 +95,10 @@ at the 2.0 quality level or because they are experimental features.</p>
 			<p align="right"><b>Misc</b></p>
 			</td>
 			<td valign="top" width="70%">
-			<p class="MsoPlainText">Content assist proposals<p class="MsoPlainText">
-			Cached Configuration for Bugzilla repository [udpate]</td>
+			<p class="MsoPlainText">Quick fix proposals for task editor spelling 
+			errors<p class="MsoPlainText">
+			Cached Configuration for Bugzilla repository [udpate]<p class="MsoPlainText">
+			Bugzilla: search dialog improved and keyword search added</td>
 		</tr>
 		<tr>
 			<td colspan="2">
