--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -74,6 +74,40 @@ at the 2.0 quality level or because they are experimental features.</p>
 </ul>
 <h2><a name="task-list">Task List</a></h2>
 
+<table cellpadding="10" cellspacing="0" id="table355">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
+			<p align="right"><b>Open Repository Tasks</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p class="MsoPlainText">The opening of repository tasks has been 
+			streamlined and integrated into the top of the Search (Ctrl+H) 
+			dialog.&nbsp; This facilitates opening tasks that are not in the <i>
+			Task List</i> by either key/ID or by searching for their summary or 
+			contents.&nbsp; Entering text into the<i> Find</i> box of the <i>
+			Task List</i> will cause a hyperlink to the search dialog to appear.&nbsp; 
+			If the <i>Find</i> text looks like a key/ID, the value will populate 
+			the <i>Search</i> dialog.&nbsp; Ctrl+Shift+F12 can be used as a 
+			shortcut for this action, and will additionally use the contents of 
+			the clipboard to look for a task key/ID to populate the <i>Search</i> 
+			dialog with.&nbsp; Note that off a task is selected in the active 
+			editor or the <i>Task List,</i> the repository in the <i>Search </i>
+			dialog will be now automatically set to the corresponding 
+			repository, otherwise the previous repository will be used.<p class="MsoPlainText">
+			The previous <i>Open Repository Task</i> dialog, disabled by default 
+			in Mylyn 2.0, can still be accessed via Ctrl+Shift+F12.&nbsp; Since 
+			the new functionality replaces this dialog the plan is to remove the 
+			old dialog for Mylyn 2.1 (see
+			<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=193423">bug 
+			193423</a>).</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
 <table cellpadding="10" cellspacing="0" id="table353">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
