REOPENED - bug 193423: merge Open Repository Task dialog and Search functionality https://bugs.eclipse.org/bugs/show_bug.cgi?id=193423

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -90,14 +90,16 @@ at the 2.0 quality level or because they are experimental features.</p>
 			the <i>Search</i> dialog.&nbsp; Ctrl+Shift+F12 can be used as a 
 			shortcut for this action, and will additionally use the contents of 
 			the clipboard to look for a task key/ID to populate the <i>Search</i> 
-			dialog with.&nbsp; Note that off a task is selected in the active 
-			editor or the <i>Task List,</i> the repository in the <i>Search </i>
-			dialog will be now automatically set to the corresponding 
-			repository, otherwise the previous repository will be used.<p class="MsoPlainText">
-			The previous <i>Open Repository Task</i> dialog, disabled by default 
-			in Mylyn 2.0, can still be accessed via Ctrl+Shift+F12.&nbsp; Since 
-			the new functionality replaces this dialog the plan is to remove the 
-			old dialog for Mylyn 2.1 (see
+			dialog with.&nbsp; The Ctrl+F12 <i>Open Task</i> dialog also 
+			provides a link to the <i>Task Search </i>page. Note that off a task 
+			is selected in the active editor or the <i>Task List,</i> the 
+			repository in the <i>Search </i>dialog will be now automatically set 
+			to the corresponding repository, otherwise the previous repository 
+			will be used.<p class="MsoPlainText">The previous <i>Open Repository 
+			Task</i> dialog, disabled by default in Mylyn 2.0, can still be 
+			accessed via Ctrl+Shift+F12.&nbsp; Since the new functionality 
+			replaces this dialog the plan is to remove the old dialog for Mylyn 
+			2.1 (see
 			<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=193423">bug 
 			193423</a>).</td>
 		</tr>
