RESOLVED - bug 160572: [patch] [new eux] add ability to attach images to tasks https://bugs.eclipse.org/bugs/show_bug.cgi?id=160572

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -134,7 +134,25 @@ at the 2.0 quality level or because they are experimental features.</p>
 			<p class="MsoPlainText">Quick fix proposals for task editor spelling 
 			errors<p class="MsoPlainText">
 			Cached Configuration for Bugzilla repository [udpate]<p class="MsoPlainText">
-			Bugzilla: search dialog improved and keyword search added</td>
+			Bugzilla: search dialog improved and keyword search added<p class="MsoPlainText">
+			Landmarking improvements</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<h2><a name="task-list0">XPlanner Connector (Incubation)</a></h2>
+
+<table cellpadding="10" cellspacing="0" id="table356">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
+			<p align="right"><b>New Task Editor</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p class="MsoPlainText">The XPlanner connector has a new task editor</td>
 		</tr>
 		<tr>
 			<td colspan="2">
