RESOLVED - bug 201131: write New & Noteworthy for 2.1M1 https://bugs.eclipse.org/bugs/show_bug.cgi?id=201131

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -240,6 +240,27 @@ at the 2.0 quality level or because they are experimental features.</p>
 </table>
 
 <p class="MsoPlainText">&nbsp; </p>
+<h2><a name="task-list3">Trac Connector</a></h2>
+
+<table cellpadding="10" cellspacing="0" id="table362">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
+			<p align="right"><b>Wiki Formatting</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p class="MsoPlainText">Trac comments can be created with wiki 
+			markup and previewed before submission.&nbsp; When preview use the
+			<i>Edit</i> button to switch back into plain text editing mode.<p class="MsoPlainText">
+			<img border="0" src="images/2.1M1/trac-wiki-preview.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<p class="MsoPlainText">&nbsp; </p>
 <h2><a name="task-list0">XPlanner Connector (Incubation)</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table356">
