RESOLVED - bug 201131: write New & Noteworthy for 2.1M1 https://bugs.eclipse.org/bugs/show_bug.cgi?id=201131

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -270,7 +270,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 			</td>
 			<td valign="top" width="70%">
 			<p class="MsoPlainText">The XPlanner connector now provides a rich 
-			editor for creating new tasks.</td>
+			editor for creating new tasks.<p class="MsoPlainText">
+			<img border="0" src="images/2.1M1/xplanner-new-task-editor.jpg"></td>
 		</tr>
 		<tr>
 			<td colspan="2">
