RESOLVED - bug 201131: write New & Noteworthy for 2.1M1 https://bugs.eclipse.org/bugs/show_bug.cgi?id=201131

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -1,6 +1,6 @@
 <html>
 <body bgcolor="FFFFFF">
-
+<br>&nbsp;
 <table border="1" style="border-collapse: collapse" width="100%" id="table128" cellpadding="4" bordercolor="#FFFFFF">
 	<tr>
 		<td bgcolor="#595791" width="7%" align="center"><b>
@@ -119,6 +119,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 			</td>
 		</tr>
 </table>
+
+<p class="MsoPlainText">&nbsp; </p>
 
 <h2><a name="task-list2">Task Editor</a></h2>
 
@@ -262,7 +264,6 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <p class="MsoPlainText">&nbsp; </p>
 <h2><a name="task-list0">XPlanner Connector (Incubation)</a></h2>
-
 <table cellpadding="10" cellspacing="0" id="table356">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
