--- a/new/new-old.html
+++ b/new/new-old.html
@@ -89,23 +89,21 @@ at the 2.0 quality level or because they are experimental features.</p>
 			</td>
 			<td valign="top" width="70%">
 			<p class="MsoPlainText">The opening of repository tasks has been 
-			streamlined and integrated into the top of the <i>Task Search</i> (Ctrl+H) 
-			dialog, and facilitates opening tasks that are not in the <i>
-			Task List</i> by their key/ID.&nbsp; Entering text into the<i> Find</i> box of the <i>
-			Task List</i> will cause a hyperlink to the search dialog to appear 
-			just below the box.&nbsp; 
-			If the contents of the <i>Find</i> box look like a task key/ID, they 
-			will be used to populate 
-			the <i>Task Search</i> dialog.&nbsp; The Ctrl+Shift+F12 shortcut can 
-			also be used to invoke this action, and will additionally inspect the contents of 
-			the clipboard to look for a task key/ID to populate the <i>Task Search</i> 
+			streamlined and integrated into the top of the Search (Ctrl+H) 
+			dialog.&nbsp; This facilitates opening tasks that are not in the <i>
+			Task List</i> by either key/ID or by searching for their summary or 
+			contents.&nbsp; Entering text into the<i> Find</i> box of the <i>
+			Task List</i> will cause a hyperlink to the search dialog to appear.&nbsp; 
+			If the <i>Find</i> text looks like a key/ID, the value will populate 
+			the <i>Search</i> dialog.&nbsp; Ctrl+Shift+F12 can be used as a 
+			shortcut for this action, and will additionally use the contents of 
+			the clipboard to look for a task key/ID to populate the <i>Search</i> 
 			dialog with.&nbsp; The Ctrl+F12 <i>Open Task</i> dialog also 
-			provides a link to the <i>Task Search </i>page. <p class="MsoPlainText">
-			<img border="0" src="images/2.1M1/tasklist-search.png" width="531" height="341"><p class="MsoPlainText">
-			Note that off a task 
+			provides a link to the <i>Task Search </i>page. Note that off a task 
 			is selected in the active editor or the <i>Task List,</i> the repository in the <i>Search </i>dialog 
 			will be now automatically set to the corresponding repository, 
-			otherwise the previous repository will be used.&nbsp;
+			otherwise the previous repository will be used.<p class="MsoPlainText">
+			<img border="0" src="images/2.1M1/tasklist-search.png" width="531" height="341"><p class="MsoPlainText">
 			The previous <i>Open Repository Task</i> dialog, disabled by default 
 			in Mylyn 2.0, can still be accessed via Ctrl+Shift+F12.&nbsp; Since 
 			the new functionality replaces this dialog the plan is to remove the 
@@ -240,27 +238,6 @@ at the 2.0 quality level or because they are experimental features.</p>
 </table>
 
 <p class="MsoPlainText">&nbsp; </p>
-<h2><a name="task-list3">Trac Connector</a></h2>
-
-<table cellpadding="10" cellspacing="0" id="table362">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Wiki Formatting</b></p>
-			</td>
-			<td valign="top" width="70%">
-			<p class="MsoPlainText">Trac comments can be created with wiki 
-			markup and previewed before submission.&nbsp; When preview use the
-			<i>Edit</i> button to switch back into plain text editing mode.<p class="MsoPlainText">
-			<img border="0" src="images/2.1M1/trac-wiki-preview.png"></td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-<p class="MsoPlainText">&nbsp; </p>
 <h2><a name="task-list0">XPlanner Connector (Incubation)</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table356">
@@ -270,8 +247,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 			</td>
 			<td valign="top" width="70%">
 			<p class="MsoPlainText">The XPlanner connector now provides a rich 
-			editor for creating new tasks.<p class="MsoPlainText">
-			<img border="0" src="images/2.1M1/xplanner-new-task-editor.jpg"></td>
+			editor for creating new tasks.</td>
 		</tr>
 		<tr>
 			<td colspan="2">
