--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -1,6 +1,6 @@
 <html>
 <body bgcolor="FFFFFF">
-<br>&nbsp;
+
 <table border="1" style="border-collapse: collapse" width="100%" id="table128" cellpadding="4" bordercolor="#FFFFFF">
 	<tr>
 		<td bgcolor="#595791" width="7%" align="center"><b>
@@ -80,6 +80,23 @@ at the 2.0 quality level or because they are experimental features.</p>
 -->
 <hr>
 
+<h2>&nbsp;</h2>
+
+<table cellpadding="10" cellspacing="0" id="table363">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
+			<p align="right"><b>TO ADD</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p class="MsoPlainText">Schedule for menu improvements</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
 <h2><a name="task-list">Task List</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table355">
@@ -119,8 +136,6 @@ at the 2.0 quality level or because they are experimental features.</p>
 			</td>
 		</tr>
 </table>
-
-<p class="MsoPlainText">&nbsp; </p>
 
 <h2><a name="task-list2">Task Editor</a></h2>
 
@@ -264,6 +279,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <p class="MsoPlainText">&nbsp; </p>
 <h2><a name="task-list0">XPlanner Connector (Incubation)</a></h2>
+
 <table cellpadding="10" cellspacing="0" id="table356">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
