--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -88,7 +88,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 			<p align="right"><b>TO ADD</b></p>
 			</td>
 			<td valign="top" width="70%">
-			<p class="MsoPlainText">Schedule for menu improvements</td>
+			<p class="MsoPlainText">Schedule for menu improvements<p class="MsoPlainText">
+			Shortcuts for creating local tasks (e.g. Alt+Ins, sequence on Mac)</td>
 		</tr>
 		<tr>
 			<td colspan="2">
