RESOLVED - bug 187156: suppress showing subtasks as children of query if already visible https://bugs.eclipse.org/bugs/show_bug.cgi?id=187156

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -89,7 +89,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 			</td>
 			<td valign="top" width="70%">
 			<p class="MsoPlainText">Schedule for menu improvements<p class="MsoPlainText">
-			Shortcuts for creating local tasks (e.g. Alt+Ins, sequence on Mac)</td>
+			Shortcuts for creating local tasks (e.g. Alt+Ins, sequence on Mac)<p class="MsoPlainText">
+			Subtask improvements (properly nested now)</td>
 		</tr>
 		<tr>
 			<td colspan="2">
