--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -90,7 +90,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 			<td valign="top" width="70%">
 			<p class="MsoPlainText">Schedule for menu improvements<p class="MsoPlainText">
 			Shortcuts for creating local tasks (e.g. Alt+Ins, sequence on Mac)<p class="MsoPlainText">
-			Subtask improvements (properly nested now, on by default)</td>
+			Subtask improvements (properly nested now, on by default)<p class="MsoPlainText">
+			JIRA new subtask editor</td>
 		</tr>
 		<tr>
 			<td colspan="2">
