NEW - bug 196029: support import/export of local tasks https://bugs.eclipse.org/bugs/show_bug.cgi?id=196029

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -92,7 +92,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 			Shortcuts for creating local tasks (e.g. Alt+Ins, sequence on Mac)<p class="MsoPlainText">
 			Subtask improvements (properly nested now, on by default)<p class="MsoPlainText">
 			JIRA new subtask editor<p class="MsoPlainText">
-			Clone task action added</td>
+			Clone task action added<p class="MsoPlainText">
+			Task import and export</td>
 		</tr>
 		<tr>
 			<td colspan="2">
