--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -91,7 +91,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 			<p class="MsoPlainText">Schedule for menu improvements<p class="MsoPlainText">
 			Shortcuts for creating local tasks (e.g. Alt+Ins, sequence on Mac)<p class="MsoPlainText">
 			Subtask improvements (properly nested now, on by default)<p class="MsoPlainText">
-			JIRA new subtask editor<p class="MsoPlainText">
+			JIRA new subtask actions and editor<p class="MsoPlainText">
 			Clone task action added<p class="MsoPlainText">
 			Task import and export</td>
 		</tr>
