ASSIGNED - bug 173150: manage Mylyn participation in Europa https://bugs.eclipse.org/bugs/show_bug.cgi?id=173150

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -12,7 +12,15 @@
 		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
 	</tr>
 	<tr>
-		<td bgcolor="#FAF7FB"><font size="1">2.1M1<br>
+		<td bgcolor="#FAF7FB"><font size="1">2.1<br>
+		<i>Sep 28</i></font></td>
+		<td bgcolor="#FAF7FB" align="center">
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=XML&component=XPlanner&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2007-08-29&chfieldto=2007-09-29&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
+		<font size="1">134</font><br><font size="1">bugs</font></a></td>
+		<td bgcolor="#FAF7FB"><font size="1">Balazs...</font></td>
+	</tr>
+	<tr>
+		<td bgcolor="#FAF7FB"><font size="1">2.1M<br>
 		<i>Aug 27</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=XML&component=XPlanner&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2007-07-01&chfieldto=2007-08-28&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
@@ -206,7 +214,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <p class="MsoPlainText">&nbsp; </p>
 
-<h2><a name="task-list1">Bugzilla Connector (Incubation)</a></h2>
+<h2><a name="task-list1">Bugzilla Connector</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table361">
 		<tr>
@@ -283,6 +291,25 @@ at the 2.0 quality level or because they are experimental features.</p>
 </table>
 
 <p class="MsoPlainText">&nbsp; </p>
+<h2><a name="task-list4">JIRA</a></h2>
+
+<table cellpadding="10" cellspacing="0" id="table364">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
+			<p align="right"><b>New...</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p class="MsoPlainText">...<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<p class="MsoPlainText">&nbsp;</p>
 <h2><a name="task-list0">XPlanner Connector (Incubation)</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table356">
