NEW - bug 195238: [Package Explorer] "Link with Editor" state not saved https://bugs.eclipse.org/bugs/show_bug.cgi?id=195238

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -101,7 +101,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 			Subtask improvements (properly nested now, on by default)<p class="MsoPlainText">
 			JIRA new subtask actions and editor<p class="MsoPlainText">
 			Clone task action added<p class="MsoPlainText">
-			Task import and export</td>
+			Task import and export<p class="MsoPlainText">
+			Improved action enablement (focus, more/less interesting)</td>
 		</tr>
 		<tr>
 			<td colspan="2">
