RESOLVED - bug 203179: wrong Task List working set can be shown on restart https://bugs.eclipse.org/bugs/show_bug.cgi?id=203179

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -102,7 +102,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 			JIRA new subtask actions and editor<p class="MsoPlainText">
 			Clone task action added<p class="MsoPlainText">
 			Task import and export<p class="MsoPlainText">
-			Improved action enablement (focus, more/less interesting)</td>
+			Improved action enablement (focus, more/less interesting), automatic 
+			disabling and hiding</td>
 		</tr>
 		<tr>
 			<td colspan="2">
