NEW - bug 195640: Filters in Package Explorer stops working https://bugs.eclipse.org/bugs/show_bug.cgi?id=195640

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -103,7 +103,9 @@ at the 2.0 quality level or because they are experimental features.</p>
 			Clone task action added<p class="MsoPlainText">
 			Task import and export<p class="MsoPlainText">
 			Improved action enablement (focus, more/less interesting), automatic 
-			disabling and hiding</td>
+			disabling and hiding<p class="MsoPlainText">
+			Filtering improvements: focus action will disable other 
+			filtering/linking actions</td>
 		</tr>
 		<tr>
 			<td colspan="2">
