--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -105,7 +105,9 @@ at the 2.0 quality level or because they are experimental features.</p>
 			Improved action enablement (focus, more/less interesting), automatic 
 			disabling and hiding<p class="MsoPlainText">
 			Filtering improvements: focus action will disable other 
-			filtering/linking actions</td>
+			filtering/linking actions<p class="MsoPlainText">
+			Additional editor management option, recommended to turn on but off 
+			by default, previous option now on by default</td>
 		</tr>
 		<tr>
 			<td colspan="2">
